2003-10-29  Arnaud Charlet  <charlet@act-europe.fr>

	* ada/acats/run_all.sh: Redirect mv output to /dev/null

2003-10-28  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	PR libgcj/10610
	* gcc.dg/ppc-stackalign-1.c: New test.

2003-10-28  Arnaud Charlet  <charlet@act-europe.fr>

	* ada/acats/run_all.sh: Change output to be more compliant with
	dejagnu framework.
	Create acats.sum and acats.log files under testsuite/ada/acats
	Only run [a-z]* directories, to filter out e.g. CVS.
	Redirect build output to log file.

2003-10-27  Arnaud Charlet  <charlet@act-europe.fr>

	* README.ada: Removed, integrated in ../doc/sourcebuild.texi

2003-10-27  Arnaud Charlet  <charlet@act-europe.fr>

	PR ada/5909:
	* README.ada, ada/acats: Import ACATS 2.5 for GCC Ada test suite.

2003-10-27  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c-torture/compile/20031023-1.c: New test.
	* gcc.c-torture/compile/20031023-2.c: New test.
	* gcc.c-torture/compile/20031023-3.c: New test.
	* gcc.c-torture/compile/20031023-4.c: New test.

2003-10-26  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	PR c++/10371
	* g++.dg/lookup/scoped8.C: New test.

2003-10-25  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* g++.dg/opt/reg-stack3.C: New test.

2003-10-24  Joseph S. Myers  <jsm@polyomino.org.uk>

	* gcc.dg/c99-arraydecl-2.c: New test.  PR c/11943.

2003-10-24  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	PR c++/11076
	* g++.dg/template/crash13.C: New test.

2003-10-24  Joseph S. Myers  <jsm@polyomino.org.uk>

	* gcc.dg/c99-restrict-2.c: New test.

2003-10-24  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/12698, c++/12699, c++/12700, c++/12566
	* g++.dg/inherit/covariant9.C: New test.
	* g++.dg/inherit/covariant10.C: New test.
	* g++.dg/inherit/covariant11.C: New test.

2003-10-20  Falk Hueffner  <falk.hueffner@student.uni-tuebingen.de>

	PR target/12654
	* gcc.c-torture/execute/20031020-1.c: New test.

2003-10-20  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>
