@@ -1,2 +1,4 @@
+cdd2a03
 templat
 # Tests must be sorted in alphabetical order
+# cdd2a03: new Ada ruling not supported yet.
